--- a/site/themes/krodox/partials/careers/form.html
+++ b/site/themes/krodox/partials/careers/form.html
@@ -10,7 +10,7 @@
             <input type="text" name="name" class="form-control" value="{{ old:name }}" placeholder="First & Last Name" required/>
         </li>
         <li>
-            <input type="tel" name="phone" id="phone-number" class="form-control" value="{{ old:phone }}" placeholder="Phone" required/>
+            <input type="text" name="phone" id="phone-number" class="form-control phone-format" value="{{ old:phone }}" placeholder="Phone" required/>
         </li>
         <li>
             <input type="email" name="email" class="form-control" value="{{ old:email }}" placeholder="Email" required/>
