--- a/site/themes/krodox/partials/modules/es/lp-form.html
+++ b/site/themes/krodox/partials/modules/es/lp-form.html
@@ -27,7 +27,7 @@
                                 <input type="text" name="name" class="form-control" value="{{ old:name }}" placeholder="Nombre y Apellido" required/>
                             </li>
                             <li>
-                                <input type="tel" name="phone" id="phone-number" class="form-control" value="{{ old:phone }}"
+                                <input type="text" name="phone" id="phone-number" class="form-control phone-format" value="{{ old:phone }}"
                                        placeholder="Teléfono" required/>
                             </li>
                             <li>
