--- a/site/themes/krodox/partials/modules/hero-dark.html
+++ b/site/themes/krodox/partials/modules/hero-dark.html
@@ -73,7 +73,7 @@
                                             </select>
                                         </div>
                                         <div class="form-group">
-                                            <input type="tel" name="phone" id="phone-number" class="form-control" value="{{ old:phone }}" placeholder="Phone Number" required/>
+                                            <input type="text" name="phone" id="phone-number" class="form-control phone-format" value="{{ old:phone }}" placeholder="Phone Number" required/>
                                         </div>
                                         <div class="form-group">
                                             <input type="email" name="email" class="form-control" value="{{ old:email }}" placeholder="Email" required/>
