--- a/site/themes/krodox/partials/modules/lp-form.html
+++ b/site/themes/krodox/partials/modules/lp-form.html
@@ -28,7 +28,7 @@
                                 <input type="text" name="name" class="form-control" value="{{ old:name }}" placeholder="First & Last Name" required/>
                             </li>
                             <li>
-                                <input type="tel" name="phone" id="phone-number" class="form-control" value="{{ old:phone }}"
+                                <input type="text" name="phone" id="phone-number" class="form-control phone-format" value="{{ old:phone }}"
                                        placeholder="Phone" required/>
                             </li>
                             <li>
