--- a/site/themes/krodox/templates/contact/contact.html
+++ b/site/themes/krodox/templates/contact/contact.html
@@ -62,7 +62,7 @@
                                 <input type="text" name="business_name" value="{{ old:business_name }}" class="form-control" placeholder="Business Name"/>
                             </div>
                             <div class="form-group">
-                                <input type="number" name="phone" value="{{ old:phone }}" class="form-control" placeholder="Contact Phone"/>
+                                <input type="text" name="phone" value="{{ old:phone }}" class="form-control phone-format" placeholder="Contact Phone"/>
                             </div>
                             <div class="form-group">
                                 <input type="email" name="email" value="{{ old:email }}" class="form-control" placeholder="Email"/>
