--- a/site/themes/krodox/templates/lp/fast-capital-360-partners.html
+++ b/site/themes/krodox/templates/lp/fast-capital-360-partners.html
@@ -68,7 +68,7 @@
                                                         <input type="text" name="name" class="form-control" value="{{ old:name }}" placeholder="First & Last Name" required/>
                                                     </div>
                                                     <div class="form-group">
-                                                        <input type="tel" name="phone" id="phone-number" class="form-control" value="{{ old:phone }}" placeholder="Phone" required/>
+                                                        <input type="text" name="phone" id="phone-number" class="form-control phone-format" value="{{ old:phone }}" placeholder="Phone" required/>
                                                     </div>
                                                     <div class="form-group">
                                                         <input type="email" name="email" class="form-control" value="{{ old:email }}" placeholder="Email" required/>
