--- a/site/themes/krodox/templates/steps/step2.html
+++ b/site/themes/krodox/templates/steps/step2.html
@@ -202,7 +202,7 @@
                                                          title="This can be a person, bank or property management company.">?</div>
                                                 </div>
                                                 <div class="form-group float-label">
-                                                    <input type="tel" id="company_land_lord_phone" name="phone" class="form-control phone-format" placeholder="Landlord's Phone Number" value="{{ old:company_land_lord_phone or company_land_lord_phone }}" maxlength="14" />
+                                                    <input type="text" id="company_land_lord_phone" name="phone" class="form-control phone-format" placeholder="Landlord's Phone Number" value="{{ old:company_land_lord_phone or company_land_lord_phone }}" maxlength="14" />
                                                     <label for="company_land_lord_phone">Landlord's Phone Number</label>
                                                 </div>
                                                 <div class="form-group">
@@ -343,56 +343,6 @@
     function showDiv(divId, element) {
         document.getElementById(divId).style.display = element.value == 1 ? 'block' : 'none';
     }
-    $('.phone-format').on('keypress', function(e) {
-        var key = e.charCode || e.keyCode || 0;
-        var phone = $(this);
-        if (phone.val().length === 0) {
-            phone.val(phone.val() + '(');
-        }
-        // Auto-format- do not expose the mask as the user begins to type
-        if (key !== 8 && key !== 9) {
-            if (phone.val().length === 4) {
-            phone.val(phone.val() + ')');
-            }
-            if (phone.val().length === 5) {
-            phone.val(phone.val() + ' ');
-            }
-            if (phone.val().length === 9) {
-            phone.val(phone.val() + '-');
-            }
-            if (phone.val().length >= 14) {
-            phone.val(phone.val().slice(0, 13));
-            }
-        }
-        // Allow numeric (and tab, backspace, delete) keys only
-        return (key == 8 ||
-            key == 9 ||
-            key == 46 ||
-            (key >= 48 && key <= 57) ||
-            (key >= 96 && key <= 105));
-        })
-        .on('focus', function() {
-        phone = $(this);
-
-        if (phone.val().length === 0) {
-            phone.val('(');
-        } else {
-            var val = phone.val();
-            phone.val('').val(val); // Ensure cursor remains at the end
-        }
-        })
-        .on('blur', function() {
-        $phone = $(this);
-        if ($phone.val() === '(') {
-            $phone.val('');
-        }
-        });
-    // CSS Loader
-    $(document).ready(function(){
-        $("#submit").click(function(){
-            $("#loader").addClass("lds-ring background");
-        });
-    });
 </script>
 <style>
     select:valid {
