--- a/site/themes/krodox/templates/steps/step1.html
+++ b/site/themes/krodox/templates/steps/step1.html
@@ -15,17 +15,19 @@
                                     {{ form:set is="lead" }}
                                     {{ form:create }}
                                     <div class="fields">
-                                        <input type="text" name="honeypot" class="honeypot"/>
-                                        <input type="hidden" name="ip" value="{{ FormStackAddon:ip }}"/>
-                                        <input type="hidden" name="language" value="{{ locale }}"/>
                                         <input type="hidden" name="utm_source" value="{{ get:utm_source | sanitize }}"/>
                                         <input type="hidden" name="utm_campaign" value="{{ get:utm_campaign | sanitize }}"/>
                                         <input type="hidden" name="utm_medium" value="{{ get:utm_medium | sanitize }}"/>
                                         <input type="hidden" name="utm_term" value="{{ get:utm_term | sanitize }}"/>
                                         <input type="hidden" name="utm_content" value="{{ get:utm_content | sanitize }}"/>
                                         <input type="hidden" name="transaction_id" value="{{ get:transaction_id | sanitize }}"/>
+                                        <input type="hidden" name="gclid" value="{{ get:gclid | sanitize }}"/>
+                                        <input type="hidden" name="msclkid" value="{{ get:msclkid | sanitize }}"/>
                                         <input type="hidden" name="source" value="{{ current_uri }}"/>
                                         <input type="hidden" name="api_id" value="{{ api_id }}"/>
+                                        <input type="hidden" name="ip" value="{{ FormStackAddon:ip }}"/>
+                                        <input type="hidden" name="language" value="{{ locale }}"/>
+                                        <input type="text" name="honeypot" class="honeypot"/>
                                         {{ if (submission_id) }}
                                         <input type="hidden" name="submission_id" value="{{ submission_id }}"/>
                                         {{ /if }}
