How it works changes

--- a/site/themes/krodox/templates/how-it-works/how-it-works.html
+++ b/site/themes/krodox/templates/how-it-works/how-it-works.html
@@ -56,7 +56,8 @@
                                 </div>
                                 <div class="right">
                                     <p>
-                                        We work with revenues of $2,500 or more.
+                                        We work with revenues of $2,500<sup>**</sup> or more.
+                                        <em style="font-size: 10px;line-height: 12px;display: inline-block;">**This minimum revenue requirement does NOT apply to business owners in California. For businesses in California, a $12,000 minimum is required</em>
                                     </p>
                                 </div>
                             </li>
