--- a/site/themes/krodox/layouts/default.html
+++ b/site/themes/krodox/layouts/default.html
@@ -22,7 +22,7 @@
     <link rel="shortcut icon" href="/assets/img/favicon.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="/site/themes/krodox/css/style.css?v=2.53">
+    <link rel="stylesheet" href="/site/themes/krodox/css/style.css?v=2.54">
     <script async src="//52558.tctm.co/t.js"></script>
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -108,7 +108,7 @@
         olark.identify('8111-761-10-1294');
     </script>
     <script>
-    $('.phone-formatt').on('keypress', function(e) {
+    $('.phone-format').on('keypress', function(e) {
               var key = e.charCode || e.keyCode || 0;
               var phone = $(this);
               if (phone.val().length === 0) {
