--- a/site/themes/krodox/partials/modules/es/lp-form.html
+++ b/site/themes/krodox/partials/modules/es/lp-form.html
@@ -27,8 +27,7 @@
                                 <input type="text" name="name" class="form-control" value="{{ old:name }}" placeholder="Nombre y Apellido" required/>
                             </li>
                             <li>
-                                <input type="text" name="phone" id="phone-number" class="form-control phone-format" value="{{ old:phone }}"
-                                       placeholder="Teléfono" required/>
+                                <input type="tel" name="phone" id="phone-number" class="form-control phone-format" value="{{ old:phone }}" pattern="([0-9]{3}) [0-9]{3}-[0-9]{4}" placeholder="Ex. (888) 327-0849" required/>
                             </li>
                             <li>
                                 <input type="email" name="email" class="form-control" value="{{ old:email }}"
