--- a/site/themes/krodox/partials/modules/hero-light.html
+++ b/site/themes/krodox/partials/modules/hero-light.html
@@ -74,7 +74,7 @@
                                             </select>
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" name="phone" id="phone-number" class="form-control phone-format" value="{{ old:phone }}" placeholder="Phone Number" required/>
+                                            <input type="tel" name="phone" id="phone-number" class="form-control phone-format" value="{{ old:phone }}" pattern="([0-9]{3}) [0-9]{3}-[0-9]{4}" placeholder="Ex. (888) 327-0849" required/>
                                         </div>
                                         <div class="form-group">
                                             <input type="email" name="email" class="form-control" value="{{ old:email }}" placeholder="Email" required/>
