--- a/site/themes/krodox/templates/contact/es/contact.html
+++ b/site/themes/krodox/templates/contact/es/contact.html
@@ -61,7 +61,7 @@
                                 <input type="text" name="business_name" value="{{ old:business_name }}" class="form-control" placeholder="Nombre del Negocio"/>
                             </div>
                             <div class="form-group">
-                                <input type="text" name="phone" value="{{ old:phone }}" class="form-control phone-format" placeholder="Teléfono"/>
+                                <input type="tel" name="phone" value="{{ old:phone }}" class="form-control phone-format" pattern="([0-9]{3}) [0-9]{3}-[0-9]{4}" placeholder="Ex. (888) 327-0849"/>
                             </div>
                             <div class="form-group">
                                 <input type="email" name="email" value="{{ old:email }}" class="form-control" placeholder="Correo Electronico"/>
