--- a/site/themes/krodox/templates/contact/contact.html
+++ b/site/themes/krodox/templates/contact/contact.html
@@ -62,7 +62,7 @@
                                 <input type="text" name="business_name" value="{{ old:business_name }}" class="form-control" placeholder="Business Name"/>
                             </div>
                             <div class="form-group">
-                                <input type="tel" name="phone" value="{{ old:phone }}" class="form-control phone-format" pattern="([0-9]{3}) [0-9]{3}-[0-9]{4}" placeholder="Ex. (888) 327-0849"/>
+                                <input type="tel" name="phone" value="{{ old:phone }}" class="form-control phone-format" pattern="(?:\(\d{3}\)|\d{3})[- ]?\d{3}[- ]?\d{4}" placeholder="Ex. (888) 327-0849"/>
                             </div>
                             <div class="form-group">
                                 <input type="email" name="email" value="{{ old:email }}" class="form-control" placeholder="Email"/>
