--- a/site/themes/krodox/templates/steps/step1.html
+++ b/site/themes/krodox/templates/steps/step1.html
@@ -76,7 +76,7 @@
                                             <h3>What’s your contact information?</h3>
                                         </div>
                                         <div class="form-group input-tooltip float-label">
-                                            <input type="text" maxlength="14" id="phone" name="phone" class="form-control phone-format" placeholder="Phone Number" value="{{ old:phone or phone }}" REQUIRED />
+                                            <input type="tel" maxlength="14" id="phone" name="phone" class="form-control phone-format" placeholder="Phone Number" value="{{ old:phone or phone }}" pattern="(?:\(\d{3}\)|\d{3})[- ]?\d{3}[- ]?\d{4}" required />
                                             <label for="phone">Phone Number</label>
                                             <div class="tooltip-dot" data-toggle="tooltip" data-placement="top" title="A 10-digit number where we can best contact you.">?</div>
                                         </div>
