--- a/site/themes/krodox/templates/steps/step2.html
+++ b/site/themes/krodox/templates/steps/step2.html
@@ -203,7 +203,7 @@
                                                          title="This can be a person, bank or property management company.">?</div>
                                                 </div>
                                                 <div class="form-group float-label">
-                                                    <input type="text" id="company_land_lord_phone" name="phone" class="form-control phone-format" placeholder="Landlord's Phone Number" value="{{ old:company_land_lord_phone or company_land_lord_phone }}" maxlength="14" />
+                                                    <input type="tel" id="company_land_lord_phone" name="phone" class="form-control phone-format" placeholder="Landlord's Phone Number" value="{{ old:company_land_lord_phone or company_land_lord_phone }}" pattern="(?:\(\d{3}\)|\d{3})[- ]?\d{3}[- ]?\d{4}" maxlength="14" />
                                                     <label for="company_land_lord_phone">Landlord's Phone Number</label>
                                                 </div>
                                                 <div class="form-group">
