--- a/site/themes/krodox/templates/steps/step4.html
+++ b/site/themes/krodox/templates/steps/step4.html
@@ -138,7 +138,7 @@
                                                 <h3>Contact:</h3>
                                             </div>
                                             <div class="form-group input-tooltip float-label">
-                                                <input type="text" id="company_owner1_phone" name="company_owner1_phone" class="form-control phone-format" placeholder="Phone Number" value="{{ old:company_owner1_phone or company_owner1_phone }}" maxlength="14" required />
+                                                <input type="tel" id="company_owner1_phone" name="company_owner1_phone" class="form-control phone-format" placeholder="Phone Number" value="{{ old:company_owner1_phone or company_owner1_phone }}" pattern="(?:\(\d{3}\)|\d{3})[- ]?\d{3}[- ]?\d{4}" maxlength="14" required />
                                                 <label for="company_owner1_phone">Phone Number</label>
                                             </div>
                                             <div class="form-group input-tooltip float-label">
@@ -248,7 +248,7 @@
                                                 <h3>Contact:</h3>
                                             </div>
                                             <div class="form-group input-tooltip float-label">
-                                                <input type="text" id="company_owner2_phone" name="company_owner2_phone" class="form-control phone-format" placeholder="Phone Number" value="{{ old:company_owner2_phone or company_owner2_phone }}" maxlength="14" data-validation="required" />
+                                                <input type="tel" id="company_owner2_phone" name="company_owner2_phone" class="form-control phone-format" placeholder="Phone Number" value="{{ old:company_owner2_phone or company_owner2_phone }}" pattern="(?:\(\d{3}\)|\d{3})[- ]?\d{3}[- ]?\d{4}" maxlength="14" data-validation="required" />
                                                 <label for="company_owner2_phone">Phone Number</label>
                                             </div>
                                             <div class="form-group input-tooltip float-label">
